modified:   Makefile         modified:   poetry.lock         modified:   pyproject.toml         new file:   task_manager/locale/ru/LC_MESSAGES/django.mo         new file:   task_manager/locale/ru/LC_MESSAGES/django.po         modified:   task_manager/settings.py         modified:   task_manager/templates/index.html

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dj-database-url = "^2.1.0"
 whitenoise = {extras = ["brotil"], version = "^6.6.0"}
 gunicorn = "^22.0.0"
 uvicorn = "^0.29.0"
+django-bootstrap5 = "^24.2"
 
 
 [build-system]
