--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ whitenoise = {extras = ["brotil"], version = "^6.6.0"}
 gunicorn = "^22.0.0"
 uvicorn = "^0.29.0"
 django-bootstrap5 = "^24.2"
+django-filter = "^24.2"
+rollbar = "^1.0.0"
 
 
 [build-system]
