modified tests & add rollbar & fix deleteuser

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,12 @@ uvicorn = "^0.29.0"
 django-bootstrap5 = "^24.2"
 django-filter = "^24.2"
 rollbar = "^1.0.0"
+pytest = "^8.2.0"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.0.0"
+coverage = "^7.5.1"
 
 [build-system]
 requires = ["poetry-core"]
