--- a/requirements.txt
+++ b/requirements.txt
@@ -110,3 +110,4 @@ uvicorn==0.29.0 ; python_version >= "3.10" and python_version < "4.0" \
 whitenoise[brotil]==6.6.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:8998f7370973447fac1e8ef6e8ded2c5209a7b1f67c1012866dbcd09681c3251 \
     --hash=sha256:b1f9db9bf67dc183484d760b99f4080185633136a273a03f6436034a41064146
+rollbar==0.16.3 ; python_version >= "3.10" and python_version < "4.0"
