--- a/.github/workflows/test_cov.yml
+++ b/.github/workflows/test_cov.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.10
+          python-version: 3.8
 
       - name: Install dependencies
         run: |
@@ -24,7 +24,7 @@ jobs:
       - name: Run tests
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          DATABASE_URL: BASE_DIR / 'db.sqlite3'
+          DATABASE_URL: sqlite:///db.sqlite3
         run: |
           make test
 
@@ -33,6 +33,7 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          DATABASE_URL: sqlite:///db.sqlite3
         with:
           coverageCommand: make test-coverage
           debug: true
